@@ -1,8 +1,8 @@
 package org.example.join;
 
 
-import org.example.join.join.DataRow;
-import org.example.join.join.JoinedDataRow;
+import org.example.join.model.DataRow;
+import org.example.join.model.JoinedDataRow;
 import org.junit.jupiter.params.provider.Arguments;
 
 import java.util.Arrays;
@@ -93,7 +93,7 @@ class InnerJoinOperationDataRowArguments {
     static Stream<Arguments> provideLeftSizeSmallerThenRightSizeCollections() {
         return Stream.of(
                 Arguments.of(
-                        List.of(
+                        Arrays.asList(
                                 new DataRow<>(0, "Ukraine")
                         ),
                         Arrays.asList(
